--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,20 @@
 
 #This is the rust executable built with rustc -O scripts/rust_approach.rs
 rust_approach
+
+# MkDocs
+site/
+.cache/
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.egg-info/
+.pytest_cache/
+
+# Benchmark artifacts
+results/
+*.json
+timing.txt
+md5.txt
